# simulation

./: .gitmodules  CMakeLists.txt  README.md  kernels.hpp
cmake/: .gitignore  CMakeTestAutoGeneration.cmake  auto_ctest_impl.py  test_definition.txt
config/: calib_193.py
include/: litho_lab_basic.hpp  source.hpp
include/optical/: clip.hpp  gather_cutline.hpp  geometry.hpp  kernel_loop_v2.hpp  optical_numerics.hpp  polynomials.hpp  simulation_grid_info.hpp
include/optical/aerial_image/: abbe.hpp
include/optical/geometry/: geo_manager.hpp
include/optical/near_field/: diffraction.hpp  fresnel_equations.hpp  snells_law.hpp  thin_mask.hpp  transfer_matrix_methord.hpp  transmittance.hpp
include/optical/near_field/thin_mask/: binary_mask.hpp  thin_mask.hpp
include/optical/polarization/: polarization.hpp
include/optical/pupil/: film_stack_solver.hpp  jones_pupil.hpp  pupil.hpp  transimission_function.hpp  zernike.hpp  zernike.py
include/optical/resist/: resist_cnn.hpp  resist_common.hpp  resist_gauss_laguerre_svd.hpp  resist_least_squares.hpp
include/optical/source/: parametric_source.hpp  source.hpp
include/uca/: uca.backend.hpp
src/: diffusion_simulate.cu  fluid_simulate.cu
src/latex_calculation/: curl.py
src/maxwell_equations/: simulationE.py  wave.py
src/optical/: CMakeLists.txt  polarization.cpp  polarization.hpp  test_fresnel.cpp  test_grid_info.cpp  test_grid_info.sh  test_imaging_pupil_intensity.py  test_nearfield.cpp  test_optical.cpp  test_polynomials.cpp  test_pupil.cpp  test_rcwa.cpp  test_resist_cnn.cpp  test_simulation.cpp  test_source.cpp  test_thin_mask.py  test_tmm.cpp  test_zernike.cpp
src/optical/regist_py/: backend.hpp  basic_structure.cpp  geometry.cpp  simulation_grid_info.cpp  source_grid.cpp  thin_mask.cpp
src/optical_1/: test_fresnel.cpp  test_nearfield.cpp  test_optical.cpp  test_polar.cpp  test_polynomials.cpp  test_pupil.cpp  test_rcwa.cpp  test_resist_cnn.cpp  test_resist_least_squares.cpp  test_simulation.cpp  test_tmm.cpp
src/uca/: CMakeLists.txt  cpu_backend.cpp  gpu_backend.cpp
