find_package(cpp_cuda)
if(cpp_cuda_FOUND)
    file(GLOB cpp ${CMAKE_CURRENT_LIST_DIR}/*.cpp)
    set(uca simulation_uca)
    add_library(${uca} SHARED ${cpp})
    # target_link_libraries(${uca} PUBLIC py_visualizer::py_visualizer)
    target_link_libraries(${uca} PUBLIC cpp_cuda::cpp_cuda)
    set_target_properties(${uca} PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}) 
else()
    message(WARING "NO GPU backend found")
endif()
